tests/negative/neg_case_string_choice.safe
-- Test: neg_case_string_choice
-- Description: String literals are not admitted as PR11.2 case-arm choices.
-- Expected: REJECT unsupported_source_construct

package neg_case_string_choice

   function opcode_name (opcode : in integer) returns string

      case opcode
         when "reset"
            return "bad";

         when others
            return "ok";





